crates/rlm-derive/tests/ui/missing_pyclass.stderr
error: RlmType requires a #[pyclass] attribute; consider using #[rlm_type] to add it
 --> tests/ui/missing_pyclass.rs:4:8
  |
4 | struct MissingPyclass {
  |        ^^^^^^^^^^^^^^
