crates/rlm-derive/tests/ui/missing_pyclass.rs
use rlm_derive::RlmType;

#[derive(RlmType)]
struct MissingPyclass {
    value: i32,
}

fn main() {}
